Bug 1901139 - Stop replacing the URI of `nsDocShellLoadState` in `nsWindowWatcher::OpenWindowInternal`; r=dom-core,peterv

`nsWindowWatcher::OpenWindowInternal` takes both a URL string and `nsDocShellLoadState`
as argument. In most of cases, caller passes `null` for `nsDocShellLoadState` and
`nsWindowWatcher::OpenWindowInternal` creates it lazily with the `nsIURI` which is
converted frome the URL string. The only place that passes both non-void URL string
and non-null `nsDocShellLoadState` is in `nsDocShell::PerformRetargeting`, see
https://searchfox.org/mozilla-central/rev/e74b86533c2499eb6393071aeedcfb080d84e4da/docshell/base/nsDocShell.cpp#8409.
The passed URL string is converted from the URI of the passed `nsDocShellLoadState`,
so they are actually equal. Therefore, the code for replacing URI is redundant.

Differential Revision: https://phabricator.services.mozilla.com/D215426